syntax = "proto3";

package Shop.Application.DTOs.WalletTransaction;

message WalletTransactionReport {
    int32 id = 1;
    string user_name = 2;
    string first_name = 3;
    string last_name = 4;
    int64 amount = 5;
    int64 fecilities = 6;
    int64 org_credit = 7;
    int32 price = 8;
    string type = 9;
    int32 type_id = 10;
    string type_title = 11;
    string color = 12;
    string description = 13;
    google.protobuf.Timestamp create_date = 14;
    string create_date_shamsi = 15;
    string tracking_code = 16;
    google.protobuf.Timestamp expire_date = 17;
    string expire_date_shamsi = 18;
    bool start = 19;
    bool? active = 20;
    int32 month = 21;
    int32 persent = 22;
    int32? parent_fecilities_id = 23;
    string first_date = 24;
    string last_date = 25;
}
